# pico-simple-terminal

./: CMakeLists.txt  README.md  project_auto_set_url.cmake
simple_terminal/: CMakeLists.txt  simple_terminal.c
simple_terminal/Include/: utils.h
simple_terminal/Source/: utils.c
